[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Images/PlanoPilotoIntro/Cópia de em_conversa.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/PlanoPilotoIntro/ranieri_resize25.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/PlanoPilotoIntro/5-congresso nacional.png" type="Texture" id=3]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Images/Taguatinga/ícone_fala.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/PlanoPilotoIntro/ranieri_profile.png" type="Texture" id=6]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Themes/CharacterChoice.tres" type="Theme" id=8]
[ext_resource path="res://scenes/PlanoPiloto/dialogs/RanieriJornalista.gd" type="Script" id=9]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/AuxScenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_color = Color( 0.215686, 0.298039, 0.388235, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
resource_name = "Zoom1"
tracks/0/type = "value"
tracks/0/path = NodePath("Jornalista:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.065, 1.065 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Zoom2"
tracks/0/type = "value"
tracks/0/path = NodePath("Ranieri:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.39038, 1.39038 ), Vector2( 1.484, 1.484 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="Congresso" type="Sprite" parent="."]
position = Vector2( 579.841, 375 )
scale = Vector2( 1.2931, 1.2931 )
texture = ExtResource( 3 )

[node name="Jornalista" type="Sprite" parent="."]
position = Vector2( 657, 418 )
scale = Vector2( 1.065, 1.065 )
texture = ExtResource( 1 )

[node name="Ranieri" type="Sprite" parent="."]
position = Vector2( 306, 520 )
scale = Vector2( 1.39038, 1.39038 )
texture = ExtResource( 2 )

[node name="ChatBox" parent="." instance=ExtResource( 4 )]
margin_left = -92.0
margin_top = 155.0
margin_right = 4.0
margin_bottom = 203.0
chat = "*J*Sr. Presidente da Câmara, gostaríamos de saber o que está acontecendo aí no Congresso Nacional? Tem a ver com as falácias quanto ao retorno da capital do país para o Rio de Janeiro?
*R*Estou saindo agora de uma reunião dentro da câmara dos deputados e estávamos discutindo sobre a situação nacional. Não há nenhuma discussão quanto ao retorno da capital para Guanabara. A sede única do Poder Legislativo, como dos demais poderes, é Brasília, e aqui o Congresso está trabalhando.
*J*Sr. Deputado, poderia nos dizer alguma das pautas da reunião?
*R*Nós, deputados representantes das mesas diretoras da Câmara dos deputados e do Senado Federal, tratamos da instalação da Rádio do Congresso, pois queremos abrigar em Brasília o maior centro de transmissão radiofônica da América do Sul. 
*J*Agradecemos a atenção do sr. Deputado Ranieri Mazzilli."
img = [ ExtResource( 5 ), ExtResource( 6 ) ]
cha = [ "J", "R" ]
image_scales = [ Vector2( 0.9, 0.9 ), Vector2( 0.67, 0.68 ) ]
nam = [ "José Miguel", "Ranieri Mazzilli" ]
resize_panel = [ Vector2( 101, 26 ), Vector2( 135, 26 ) ]
chat2 = true

[node name="PopWindow" type="WindowDialog" parent="."]
margin_left = 235.0
margin_top = 202.0
margin_right = 735.0
margin_bottom = 341.0
theme = ExtResource( 8 )

[node name="Label" type="Label" parent="PopWindow"]
margin_left = 12.0
margin_top = 25.0
margin_right = 479.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0.215686, 0.298039, 0.388235, 1 )
custom_fonts/font = SubResource( 1 )
text = "após o político ir embora, Israel grita:"
align = 1
autowrap = true

[node name="PlayerBackPack" parent="." instance=ExtResource( 10 )]
visible = false

[node name="CharacterZoom" type="AnimationPlayer" parent="."]
anims/Zoom1 = SubResource( 2 )
anims/Zoom2 = SubResource( 3 )

[node name="MainMusic" parent="." instance=ExtResource( 12 )]

[connection signal="end_dialog" from="ChatBox" to="." method="_on_ChatBox_end_dialog"]
[connection signal="next_dialog" from="ChatBox" to="." method="_on_ChatBox_next_dialog"]
[connection signal="previous_dialog" from="ChatBox" to="." method="_on_ChatBox_previous_dialog"]
[connection signal="start_chat" from="ChatBox" to="." method="_on_ChatBox_start_chat"]
[connection signal="popup_hide" from="PopWindow" to="." method="_on_PopWindow_popup_hide"]
